# UltimaScraper

./: .dockerignore  .gitignore  Dockerfile  Linux.md  OnlyFans.py  README.md  Start Datascraper.py  StartDatascraper.py  config.json  docker-compose.yaml  pyinstaller.spec  pyproject.toml  requirements.txt  settings.json  start_ofd.py  start_us.py  updater.py
.github/workflows/: codeql.yml  master_sdf.yml
apis/: api_helper.py  api_streamliner.py
apis/fansly/: fansly.py
apis/fansly/classes/: __init__.py  auth_model.py  collection_model.py  create_auth.py  create_message.py  create_post.py  create_story.py  create_user.py  extras.py  message_model.py  post_model.py  user_model.py
apis/onlyfans/: onlyfans.py
apis/onlyfans/classes/: __init__.py  auth_model.py  create_auth.py  create_message.py  create_post.py  create_story.py  create_user.py  extras.py  message_model.py  post_model.py  story_model.py  user_model.py
apis/starsavn/: starsavn.py
apis/starsavn/classes/: __init__.py  auth_model.py  create_auth.py  create_message.py  create_post.py  create_product.py  create_user.py  extras.py  highlight_model.py  message_model.py  post_model.py  product_model.py  story_model.py  user_model.py
apis/starsavn2/: starsavn.py
classes/: make_config.py  make_settings.py  prepare_directories.py  prepare_download.py  prepare_metadata.py  prepare_webhooks.py
database/archived_databases/messages/: alembic.ini  messages.py  test_messages.db
database/archived_databases/posts/: posts.py  test_posts.db
database/archived_databases/stories/: stories.py  test_stories.db
database/databases/messages/: messages.py  test_messages.db
database/databases/posts/: posts.db  posts.py  test_posts.db
database/databases/stories/: stories.py  test_stories.db
database/databases/user/: user_database.py
database/databases/user_data/: alembic.ini  (+2 more)
database/models/: api_table.py  media_table.py
datascraper/: main_datascraper.py
docs/: Linux.md  WinEXE.md
examples/: authentication.py
extras/OFLogin/: start_ofl.py
extras/OFRenamer/: .gitignore  start.py  start_ofr.py
extras/OFSorter/: ofsorter.py
helpers/: db_helper.py  main_helper.py
modules/: bbwchan.py  fansly.py  four_chan.py  fourchan.py  helpers.py  justfor.py  justforfans.py  module_streamliner.py  onlyfans.py  patreon.py  stars_avn.py  starsavn.py  streamliner.py
settings/: config.json  extra_auth.json
tests/: main_test.py  test_signed_headers.py
ultima_scraper/: ultima_scraper.py
ultima_scraper/datascraper/: main_datascraper.py
ultima_scraper/docs/: Linux.md  WinEXE.md
ultima_scraper/managers/: dashboard_controller_api.py  ui_manager.py
ultima_scraper/metadata_manager/: metadata_manager.py
ultima_scraper/modules/: fansly.py  module_streamliner.py  onlyfans.py
(+48 files in other folders)
