[tool.poetry]
name = "ultima-scraper"
version = "8.0.0"
description = ""
authors = [
    "DIGITALCRIMINALS <89371864+digitalcriminals@users.noreply.github.com>",
]
license = "GPL-3.0"
readme = "README.md"
packages = [{ include = "ultima_scraper" }]
include = ["ultima_scraper/py.typed"]

[tool.poetry.dependencies]
python = "^3.10 <3.12"
requests = "^2.26.0"
ultima-scraper-api = "1.0.5"
ultima-scraper-collection = "1.0.3"
ultima-scraper-renamer = "1.0.0"
[tool.poetry.dev-dependencies]
pyinstaller = { version = "^5.0.1", markers = "sys_platform == 'win32'" }
requests-html = "^0.10.0"
black = "^22.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
